--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "Akash Sahu",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "google-auth-library": "^8.1.1",
+    "jsonwebtoken": "^8.5.1",
     "node-static": "^0.7.11",
     "socket.io": "^4.5.1"
   },
